# bhasignal

./: .env.example  .gitignore  README.md  blueprint.md  manual-first-mvp-plan.md  mvp-execution-plan.md  package-lock.json  package.json  prd.md  todo.md  tsconfig.base.json  vercel.json
.githooks/: pre-commit
.github/: pull_request_template.md
.github/workflows/: ci.yml
apps/web/: package.json  tailwind.config.ts  tsconfig.json  vercel.json
apps/web/app/: error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
apps/web/components/: app-shell.tsx  deep-analytics.tsx  ui.tsx
apps/web/lib/: analytics.ts  auth-constants.ts  auth.ts  brand.ts  dashboard.ts  data-ops.ts  demerit-escalation.ts  discipline-events.ts  google-sheets-client.ts  guardian-contacts.ts  ingestion-workflow.ts  ingestion.ts  interventions.ts  local-storage-adapter 2.ts  local-storage-adapter.ts  navigation.tsx  notifications.ts  parser-client.ts  parser-config.ts  parser-contract.ts  policies.ts  reporting.ts  review.ts  session.ts  storage.ts  student-identity.ts  student-profiles.ts  supabase-server-client.ts  (+9 more)
docs/: engineering-validation.md  pdf-samples.md  uat-checklist.md
docs/runbooks/: notification-outage.md  parser-failure.md  policy-rollback.md  sheets-quota-issue.md  sycamore-integration.md
services/parser/: .env.example  pyproject.toml
services/parser/src/parser_service/: __init__.py  main.py  pipeline.py
services/parser/tests/: test_corpus_metrics.py  test_health.py  test_pipeline.py
services/parser/tests/fixtures/: corpus.json
supabase/: schema.sql
(+97 files in other folders)
